tests/sema/veo/87_error_cast_noth_to_int.veo
func callback() {}

func main() {
    // expected-error@+1: cannot cast 'noth' to 'i64'
    let addr = callback().(i64);
}
